# llmDirector

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst
llm_director/base/: blocks.py  director.py
llm_director/utils/: director_utils.py
