[tool.poetry]
name = "llm-director"
version = "0.1.0"
description = "A light-weight code development platform for deploying chains of customizable operations"
authors = ["jacob-hansen <85134229+jacob-hansen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
